# SoroMint

./: .env.example  ANALYTICS_ENDPOINTS_TESTING.md  Cargo.toml  IMPLEMENTATION_ISSUES_168_193_176.md  Makefile  PLATFORM_FEES.md  PR_SUMMARY.md  README.md  SECURITY.md  STREAMING_IMPLEMENTATION.md  create_all_prs.sh  create_prs.sh  lib.rs
.github/: main.yml
.github/workflows/: contracts-build.yml
client/: package-lock.json  package.json
client/src/: App.jsx  App.test.jsx  index.css  main.jsx
contracts/: README.md
contracts/access/: Cargo.toml
contracts/ai_metadata_validator/: Cargo.toml
contracts/backstop/: Cargo.toml
contracts/bridge_receiver/: Cargo.toml  README.md
contracts/compliance/: Cargo.toml
contracts/compliance/src/: compliance.rs  events.rs  test_compliance.rs
contracts/compliance/test_snapshots/test_compliance/: test_blacklist_event_emitted.1.json  test_blacklist_flow.1.json  test_blacklist_unauthorized_fails.1.json  test_clawback_event_emitted.1.json  test_clawback_event_topic_order.1.json  test_clawback_executes_successfully.1.json  test_clawback_insufficient_balance_fails.1.json  test_clawback_record_stored_and_retrievable.1.json  test_clawback_unauthorized_caller_fails.1.json  test_clawback_uses_default_jurisdiction_when_none.1.json  test_clawback_zero_amount_fails.1.json  test_get_admin_returns_initial.1.json  test_get_clawbacks_for_address_pagination.1.json  test_initialize_success.1.json  test_initialize_twice_panics.1.json  test_require_not_blacklisted_panics_on_blacklisted.1.json  test_set_admin_success.1.json  test_set_clawback_admin_success.1.json  test_set_clawback_admin_unauthorized_fails.1.json  test_set_default_jurisdiction_success.1.json  test_set_token_address_success.1.json  test_set_token_address_unauthorized_fails.1.json
contracts/metadata_validator/: Cargo.toml
contracts/otc_escrow/: Cargo.toml
contracts/ownership/: Cargo.toml
contracts/proof_of_burn/: Cargo.toml  README.md
contracts/quorum_credit/: Cargo.toml
contracts/streaming/: Cargo.toml  README.md
contracts/token/: Cargo.toml
contracts/upgradeable/: Cargo.toml
contracts/vesting/: Cargo.toml
contracts/wrapper/: Cargo.toml
contracts/wrapper/src/: events.rs  lib.rs  test.rs
contracts/zk_audit_log/: Cargo.toml  README.md
docs/: private-streaming-roadmap.md  streaming-payments.md
example/: 486.md  491.md  495.md
server/: .env.example.backup  historical-indexer-worker.js  index.js  package.json  pnpm-lock.yaml  scheduled-stream-worker.js  verify-backup-system.sh
server/config/: env-config.js  (+2 more)
(+215 files in other folders)
