[workspace]
resolver = "2"

members = [
    "contracts/access",
    "contracts/ai_metadata_validator",
    "contracts/amm_factory",
    "contracts/amm_pool",
    "contracts/backstop",
    "contracts/compliance",
    "contracts/dividend",
    "contracts/factory",
    "contracts/flash_loan",
    "contracts/lending_pool",
    "contracts/lifecycle",
    "contracts/lottery",
    "contracts/metadata_validator",
    "contracts/merkle_whitelist",
    "contracts/multisig",
    "contracts/oracle",
    "contracts/otc_escrow",
    "contracts/ownership",
    "contracts/streaming",
    "contracts/timelock",
    "contracts/token",
    "contracts/upgradeable",
    "contracts/vault",
    "contracts/vesting",
    "contracts/wrapper",
]



[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
