[workspace]
resolver = "2"

members = [
    "contracts/access",
    "contracts/ai_metadata_validator",
    "contracts/bridge_receiver",
    "contracts/compliance",
    "contracts/dividend",
    "contracts/factory",
    "contracts/lifecycle",
    "contracts/multisig",
    "contracts/oracle",
    "contracts/ownership",
    "contracts/proof_of_burn",
    "contracts/token",
    "contracts/vault",
    "contracts/zk_audit_log",
]



[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
