[package]
name = "soromint-compliance"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
path = "src/compliance.rs"

[dependencies]
soroban-sdk = "22.0.0"
# soromint-ownership = { path = "../ownership" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
proptest = "1"
