[package]
name = "soromint-wrapper"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.1"
soromint-lifecycle = { path = "../lifecycle" }

[dev-dependencies]
soroban-sdk = { version = "22.0.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = "debuginfo"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
